--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 
     <artifactId>spring-boot-admin-docker</artifactId>
     <groupId>spring-boot-admin-docker</groupId>
-    <version>2.2.2</version>
+    <version>2.2.3</version>
     <packaging>jar</packaging>
 
     <name>Spring Boot Admin in a Docker Container</name>
 
     <properties>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <spring-boot-admin.version>2.2.2</spring-boot-admin.version>
-        <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <spring-boot-admin.version>2.2.3</spring-boot-admin.version>
+        <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
         <docker-image.version>${spring-boot-admin.version}</docker-image.version>
     </properties>
 
@@ -48,7 +48,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.2.4.RELEASE</version>
+                <version>${spring-boot.version}</version>
                 <executions>
                     <execution>
                         <goals>
