--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <spring-boot-admin.version>2.2.3</spring-boot-admin.version>
         <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
-        <docker-image.version>${spring-boot-admin.version}</docker-image.version>
+        <docker-image.version>${spring-boot-admin.version}-1</docker-image.version>
     </properties>
 
     <dependencyManagement>
@@ -34,7 +34,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>de.codecentric</groupId>
@@ -44,7 +43,15 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
-            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>2.2.2</version>
         </dependency>
     </dependencies>
 
