--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,18 @@
 server:
   port: 8080
+
+spring:
+  boot.admin.client:
+    url: http://localhost:8080
+    instance:
+      name: Spring Boot Admin
+      service-base-url: http://localhost:8080
+      management-base-url: http://localhost:8081
+
+management:
+  server:
+    port: 8081
+  endpoints.web.exposure.include: "*"
+  endpoint:
+    health:
+      show-details: always
