Enable actuator's k8s probes
Upgrade spring and spring-boot-admin in order to enable liveness and readiness k8s probes. See https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-features.html\#production-ready-kubernetes-probes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,5 @@ management:
   endpoint:
     health:
       show-details: always
+  health:
+    probes.enabled: true # Enable k8s liveness and readiness probes, see https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-features.html#production-ready-kubernetes-probes
