--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
         <spring-boot-admin.version>2.3.0</spring-boot-admin.version>
-        <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
-        <docker-image.version>${spring-boot-admin.version}</docker-image.version>
+        <spring-boot.version>2.3.0.RELEASE</spring-boot.version>
+        <docker-image.version>${spring-boot-admin.version}-1</docker-image.version>
     </properties>
 
     <dependencyManagement>
